@@ -10,8 +10,6 @@
 
 defined('_JEXEC') or die;
 
-
-JHtml::_('behavior.mootools');
 JHtml::_('behavior.keepalive');
 JHtml::_('behavior.formvalidation');
 ?>
